# Ring-rs

./: .claudeignore  .cursorignore  .editorconfig  .gitignore  .mcp.json  AGENTS.md  ARCH.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  PLAN_repo-maintainability.md  README.md  REMAKE_REF_PROJECT专项清单.md  ROADMAP.md  config.json  data.json  index.html  rust-toolchain.toml
.cargo/: config.toml  mutants.toml
.claude/: settings.json  settings.local.json
.githooks/: pre-commit
RFCs/: README.md  rfc-app-layer-test-infra.md  rfc-customizable-ui-system.md  rfc-debug-overlay.md  rfc-debug-state-snapshot.md  rfc-dialogue-voice-pipeline.md  rfc-dioxus-host-migration.md  rfc-extension-api-mod-effect-management.md  rfc-gameplay-scripting-layer.md  rfc-headless-testing-mode.md  rfc-host-tauri-harness-parity.md  rfc-http-bridge-api.md  rfc-inline-sprite-in-dialogue.md  rfc-input-recording-replay.md  rfc-legacy-host-retirement.md  (+13 more)
host/: Cargo.toml
host-dioxus/: Cargo.toml  Dioxus.toml
host-dioxus/assets/: poc.css
host-dioxus/src/: audio.rs  command_executor.rs  config.rs  debug_server.rs  error.rs  global.css  headless_cli.rs  init.rs  layout_config.rs  main.rs  manifest.rs  map_data.rs  render_state.rs  resources.rs  save_manager.rs  screen_defs.rs  state.rs
host-dioxus/src/components/: confirm_dialog.rs  game_menu_frame.rs  mod.rs  skip_indicator.rs  toast.rs
host-dioxus/src/screens/: history.rs  in_game_menu.rs  mod.rs  save_load.rs  settings.rs  title.rs
host-dioxus/src/state/: game_lifecycle.rs  harness.rs  interaction.rs  mod.rs  save_load.rs  session.rs  tests.rs  tick.rs  types.rs
host-dioxus/src/vn/: audio_bridge.rs  background.rs  chapter_mark.rs  character.rs  choice.rs  dialogue.rs  map_overlay.rs  minigame_overlay.rs  mod.rs  nvl.rs  quick_menu.rs  rule_transition.rs  scene.rs  title_card.rs  transition.rs  video.rs
host-tauri/src-tauri/: Cargo.toml  tauri.conf.json
host-tauri/src-tauri/capabilities/: default.json
host-tauri/src-tauri/src/: audio.rs  command_executor.rs  commands.rs  config.rs  debug_server.rs  error.rs  headless_cli.rs  lib.rs  main.rs  manifest.rs  protocol.rs  render_state.rs  resources.rs  save_manager.rs  state.rs
host/assets/scripts/: demo.md
host/src/: app_mode.rs  build_ui.rs  components.rs  egui_actions.rs  headless.rs  host_app.rs  lib.rs  main.rs  plugin.rs  rendering_types.rs  resources.rs  state.rs  test_harness.rs
host/src/app/: app_mode.rs  bootstrap.rs  draw.rs  engine_services.rs  init.rs  mod.rs  persistent.rs  save.rs  script_loader.rs  snapshot.rs  state.rs  update.rs
host/src/app/app_mode/: mod.rs  tests.rs
host/src/app/app_mode/tests/: high_value.rs  low_value.rs  mod.rs
host/src/app/command_handlers/: audio.rs  character.rs  effect_applier.rs  mod.rs  transition.rs
host/src/app/update/: mod.rs  modes.rs  scene_transition.rs  script.rs
host/src/audio/: mod.rs  playback.rs
host/src/backend/: dissolve_renderer.rs  egui_integration.rs  gpu_context.rs  gpu_texture.rs  math.rs  mod.rs  sprite_renderer.rs
host/src/command_executor/: audio.rs  background.rs  character.rs  effects.rs  mod.rs  tests.rs  types.rs  ui.rs
host/src/command_executor/tests/: high_value.rs  low_value.rs  mod.rs
host/src/config/: mod.rs  tests.rs
host/src/config/tests/: high_value.rs  low_value.rs  mod.rs
host/src/egui_screens/: confirm.rs  game_menu.rs  helpers.rs  history.rs  ingame.rs  ingame_menu.rs  mod.rs  save_load.rs  settings.rs  skip_indicator.rs  title.rs  toast.rs
host/src/event_stream/: mod.rs
host/src/extensions/: builtin_effects.rs  capability.rs  context.rs  manifest.rs  mod.rs  registry.rs  services.rs  tests.rs
host/src/extensions/tests/: high_value.rs  low_value.rs  mod.rs
host/src/game_mode/: bridge.rs  http_bridge.rs  lifecycle.rs  mod.rs
host/src/input/: choice_navigator.rs  mod.rs  recording.rs  state.rs  tests.rs
host/src/input/tests/: high_value.rs  low_value.rs
host/src/manifest/: mod.rs  tests.rs
host/src/manifest/tests/: high_value.rs  low_value.rs  mod.rs
host/src/renderer/: background_transition.rs  character_animation.rs  draw_commands.rs  headless_tests.rs  image_dissolve.rs  mod.rs  render_state.rs  scene_effects.rs  scene_transition.rs  text_renderer.rs  transition.rs
host/src/renderer/animation/: animation.rs  easing.rs  lifecycle.rs  mod.rs  queries.rs  system.rs  target.rs  traits.rs  transform.rs
host/src/renderer/effects/: mod.rs  registry.rs  request.rs  resolver.rs
host/src/renderer/headless_tests/: high_value.rs  low_value.rs  mod.rs
host/src/renderer/render_state/: dialogue.rs  mod.rs  scene.rs  tests.rs
host/src/renderer/render_state/tests/: high_value.rs  low_value.rs  mod.rs
host/src/renderer/scene_transition/: animatable.rs  mod.rs  tests.rs  types.rs
host/src/renderer/scene_transition/tests/: high_value.rs  low_value.rs
host/src/resources/: cache.rs  error.rs  mod.rs  path.rs  source.rs  tests.rs
host/src/resources/tests/: high_value.rs  low_value.rs  mod.rs
host/src/save_manager/: mod.rs  tests.rs
host/src/save_manager/tests/: high_value.rs  low_value.rs  mod.rs
host/src/screens/: history.rs  ingame_menu.rs  mod.rs  save_load.rs  settings.rs  title.rs
host/src/systems/: commands.rs  input.rs  mod.rs  runtime.rs  setup.rs  ui.rs
host/src/ui/: asset_cache.rs  button.rs  image_slider.rs  layout.rs  list.rs  map.rs  mod.rs  modal.rs  nine_patch.rs  panel.rs  render_context.rs  screen_defs.rs  scroll.rs  skin.rs  slider.rs  tab.rs  theme.rs  theme_loader.rs  toast.rs  toggle.rs
host/src/ui/layout/: mod.rs  tests.rs
host/src/ui/layout/tests/: high_value.rs  low_value.rs
host/src/ui/screen_defs/: mod.rs  tests.rs
host/src/ui/screen_defs/tests/: high_value.rs  low_value.rs  mod.rs
host/src/ui_modes/: map_handler.rs  mod.rs
host/src/video/: audio.rs  decoder.rs  mod.rs
host/tests/: command_execution.rs  command_execution_e2e.rs
tools/asset-packer/: Cargo.toml
tools/asset-packer/src/: inspect.rs  main.rs  pack.rs  release.rs  utils.rs
tools/rendering-poc/: Cargo.toml
tools/rendering-poc/src/: main.rs
(+405 files in other folders)
