[workspace]
resolver = "3"

members = [
    "vn-runtime",
    # "host",
    "host-tauri/src-tauri",
    "host-dioxus",
    "tools/asset-packer",
    "tools/xtask",
]

default-members = ["host-tauri/src-tauri"]

[profile.dev.package."*"]
opt-level = 1

[profile.release]
debug = true

[profile.test]
debug = "none"

[profile.mutants]
inherits = "test"
debug = "none"