[workspace]
resolver = "3"

members = [
    "vn-runtime",
    "host-dioxus",
    "tools/asset-packer",
    "tools/xtask",
]

default-members = ["host-dioxus"]

[workspace.dependencies]
# ── 序列化 ──
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── 错误处理 ──
thiserror = "2"
anyhow = "1"

# ── CLI / 工具 ──
clap = { version = "4", features = ["derive"] }
walkdir = "2.5"
xshell = "0.2"

# ── 内部 crate ──
vn-runtime = { path = "vn-runtime" }

# ── 测试 ──
insta = { version = "1", features = ["yaml"] }

[profile.dev.package."*"]
opt-level = 1

[profile.release]
debug = true

[profile.test]
debug = "none"

[profile.mutants]
inherits = "test"
debug = "none"