[package]
name = "host-dioxus"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
tokio = { version = "1", features = ["rt", "time", "net", "macros"] }
axum = "0.8"

# ── 后端核心 ──
vn-runtime = { path = "../vn-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
