[package]
name = "host-dioxus"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", default-features = false, features = ["desktop", "minimal", "document"] }
tokio = { version = "1", features = ["rt", "time", "net", "macros"] }
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1"] }

# ── 后端核心 ──
vn-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
