[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
vn-runtime = { version = "0.1.0", path = "../vn-runtime" }
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 图像格式支持 - 添加 JPEG 支持
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# 音频库 - 支持 MP3, WAV, FLAC, OGG
rodio = { version = "0.19", features = ["mp3", "wav", "flac", "vorbis"] }

# ZIP 文件支持（资源打包/发布）
zip = "2.2"
