[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
vn-runtime = { version = "0.1.0", path = "../vn-runtime" }
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

# 图像格式支持
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }

# 音频库 - 支持 MP3, WAV, FLAC, OGG
rodio = { version = "0.22", default-features = false, features = ["mp3", "wav", "flac", "vorbis", "playback"] }

# ZIP 文件支持（资源打包/发布）
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }
