[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
vn-runtime = { version = "0.1.0", path = "../vn-runtime" }
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

# 图像格式支持
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }

# 音频库 - 支持 MP3, WAV, FLAC, OGG
rodio = { version = "0.22", default-features = false, features = ["mp3", "wav", "flac", "vorbis", "playback"] }

# ZIP 文件支持（资源打包/发布）
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }

# 渲染后端 (winit + wgpu + egui)
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
wgpu = { version = "24", default-features = false, features = ["wgsl", "dx12"] }
egui = { version = "0.31", default-features = false }
egui-wgpu = "0.31"
egui-winit = { version = "0.31", default-features = false, features = ["clipboard"] }
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# 视频解码（FFmpeg 子进程封装）
ffmpeg-sidecar = { version = "2.4", default-features = false }

# 时间格式化（存档保存时间展示）
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
tempfile = "3"
