[package]
name = "asset-packer"
version = "0.1.0"
edition = "2024"
description = "资源打包工具 - 将 assets 目录打包为 ZIP 文件"
default-run = "packer"

[[bin]]
name = "packer"
path = "src/main.rs"

[dependencies]
zip = { version = "8.1", default-features = false }
walkdir = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
xshell = { workspace = true }