[package]
name = "rendering-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "24"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
